--- a/styles.css
+++ b/styles.css
@@ -68,4 +68,33 @@ form button {
     color: #fff;
     font-size: 1.4rem;
     font-weight: 700;
+    transition: all .3s;
+    cursor: pointer;
+}
+
+form button: hover {
+    background-color: var(--color-sec);
+}
+
+.modal {
+    /* display: none; */
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,.05);
+    z-index: 1;
+}
+
+.modal-content {
+    width: 80%;
+    max-width: 60rem;
+    background-color: #eee;
+    margin: 15% auto;
+    padding: 2rem;
+    border: 1px solid #777;
+    text-align: center;
+    animation: slide ease .8s;
 }
