--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ form button: hover {
 }
 
 .modal {
-    /* display: none; */
+    display: none;
     position: fixed;
     left: 0;
     top: 0;
@@ -97,4 +97,22 @@ form button: hover {
     border: 1px solid #777;
     text-align: center;
     animation: slide ease .8s;
+}
+
+@keyframes slide {
+    from {
+        transform: translateY(-30rem);
+    }
+    to {
+        transform: translateY(0);
+    }
+}
+
+.close {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    color: var(--color-primary);
+    font-size: 2rem;
+    cursor: pointer;
 }
